crates/math-core/tests/snapshots/error_test__kern_negative.snap
---
source: crates/math-core/tests/error_test.rs
expression: "x\\kern-1em y"
---
Error: Negative values are currently not supported.
   ╭─[ <input>:1:7 ]
   │
 1 │ x\kern-1em y
   │       ──┬─  
   │         ╰─── negative value here
───╯
